# mcpdevelop

./: CLAUDE.md  last.py  prompt.md
MCP服务器/: mcp_client.js  mcp_server.js
gemini/: main.py  pyproject.toml  test.py
generator/: README.md  calculator.py  extract_inject_values.py  extracted_inject_values.txt  filt_inject_generator.py  mapping.py  polynomial_calculator.py  raw.py  test_reconstruct_calculator.py
generator/Val_Instruction/: ChartoNum_20250802_154816.json  ChartoNum_20250802_165539.json  ChartoNum_20250831_171024.json  ChartoNum_20250831_171117.json  ChartoNum_20250902_183946.json  ChartoNum_20250902_184138.json  ChartoNum_20250902_191233.json  ChartoNum_20250902_192530.json  ChartoNum_20250903_113226.json
generator/inject_content/: polynomial_results_20250803_200148.json  polynomial_results_20250831_171425.json  polynomial_results_20250831_171727.json  polynomial_results_20250831_171929.json  polynomial_results_20250831_172003.json  polynomial_results_20250902_184458.json  polynomial_results_20250902_184559.json  polynomial_results_20250902_191327.json  polynomial_results_20250902_191349.json  polynomial_results_20250902_192607.json  polynomial_results_20250902_192658.json  polynomial_results_20250903_113333.json  polynomial_results_20250903_113349.json  polynomial_results_20250903_113423.json
mcp-client/: .env  README.md  client.py  mcp-client.py  pyproject.toml  server.py
multi-tpa/: main.py  pyproject.toml
testmcp/: main.py  pyproject.toml  uv.toml
testmcp/wayspiritmcp_weather.egg-info/: PKG-INFO  (+3 more)
贪吃蛇/: index.html  script.js  styles.css
(+18 files in other folders)
