[project]
name = "wayspiritmcp-weather"
version = "0.1.0"
description = "get weather information from openweather"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.8.0",
    "openai>=1.78.1",
    "python-dotenv>=1.1.0",
]
[project.scripts]
wayspiritmcp-weather = "server:main"
